--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ h2 {
 }
 h3 {
   color: darkslategray;
-  font-size: 2.8rem;
+  font-size: 2.4rem;
 }
 p {
   font-size: 1.6rem;
@@ -282,6 +282,9 @@ footer p {
   color: orange;
   transform: scale(1.1);
 }
+.process {
+  margin: 60px 0 40px;
+}
 .view-more-div {
   margin-top: 20px;
   text-align: center;
@@ -303,8 +306,29 @@ footer p {
   transform: scale(1.1);
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
+.process {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.process .steps {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  align-items: center;
+  margin: 20px;
+  height: fit-content;
+  border-radius: 15px;
+  text-align: center;
+}
+.process .steps .icon {
+  width: 50px;
+  height: 50px;
+  padding-bottom: 5px;
+}
 .top-content {
   margin: 40px 0 40px;
+  text-align: center;
 }
 @media only screen and (max-width: 1000px) {
   .top-content {
