--- a/less/home-page.less
+++ b/less/home-page.less
@@ -37,6 +37,9 @@
   }
 }
 
+.process {
+  margin: 60px 0 40px;
+}
 .view-more-div {
   margin-top: 20px;
   text-align: center;
@@ -61,8 +64,32 @@
   }
 }
 
+.process {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+  .steps {
+    display: flex;
+    flex-direction: column;
+    width: 320px;
+    align-items: center;
+    margin: 20px;
+    height: fit-content;
+    border-radius: 15px;
+    text-align: center;
+
+    .icon {
+      width: 50px;
+      height: 50px;
+      padding-bottom: 5px;
+    }
+  }
+}
+
 .top-content{
   margin: 40px 0 40px;
+  text-align: center;
 
   @media only screen and (max-width: 1000px) {
     margin: 20px;
