--- a/less/about.less
+++ b/less/about.less
@@ -1,20 +1,62 @@
 // About page
 
-.about-content {
-    padding: 150px 0 0; 
-}
 .team-members {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; 
-    padding: 20px 0 50px;
+    justify-content: center;
+    padding-top: 50px;
+    
+    img {
+      width: 270px;
+      height: 300px;
+      margin: 5px;
+      border-radius: 15px;
+      transition: all 600ms;
+    }
+}
 
-    .member {
-        background-color: lightblue;
-        width: 315px;
-        height: 250px;
-        margin: 4px;
-        border-radius: 15px;
-        transition: all 600ms;
+.about-title {
+    padding-top: 50px;
+    text-align: center;
+}
+
+.profile {
+    text-align: center;
+    margin: 20px;
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    h3 {
+        font-size: 1.8rem;
+    }
+}
+
+.member-info {
+    width: 270px;
+    padding: 0 20px 40px;
+}
+
+.git-button{
+    border: 1px solid gray;
+    padding:10px 10px;
+    text-align: center;
+    width: 180px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border-radius: 15px;
+    transition: all 600ms;
+    margin-top: 20px;
+  
+    @media only screen and (max-width: 400px) {
+      padding: 5px 5px;
+      width: 100px;
+    }
+  
+    &:hover {
+      border: 1px solid orange;
+      color: orange;
+      transform: scale(1.1)
     }
 }
