--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,9 +2,8 @@
 
 .header-img {
   display: block;
-  padding-top: 55px;
   width:100%;
-  height: 80vh;
+  height: 60vh;
   transition: all 5000ms;
 
   @media only screen and (max-width: 400px) {
@@ -100,22 +99,27 @@
   width: 90%;
   position: absolute;
   text-align: center;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 
   @media only screen and (max-width: 400px) {
     top: 35%;
+
   }
 
   @media only screen and (max-width: 800px) {
-    top: 30%;
+    top: 42%;
   }
 
   h2 {
     font-family: 'Cinzel', serif;
     font-size: 3.5rem;
     color: white;
+
+    @media only screen and (max-width: 400px) {
+      font-size: 2.5rem;
+    }
   }
 
   p {
@@ -126,11 +130,11 @@
 
 .call-to-action .register {
   margin: 20px;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-family: 'Ubuntu', sans-serif;
 
   @media only screen and (max-width: 400px) {
-    width: 160px;
+    width: 110px;
   }
 }
 
@@ -140,9 +144,9 @@
   justify-content: center;
   
   img {
-    width: 324px;
+    width: 315px;
     height: 250px;
-    margin: 1px;
+    margin: 5px;
     border-radius: 15px;
     transition: all 600ms;
 
@@ -171,10 +175,6 @@
       margin: 3px;
       height: fit-content;
       border-radius: 15px;
-
-      p{
-        color: orange;
-      }
     }
   }
 
