--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,18 +1,24 @@
 // Home Page
 
-.header-img {
-  display: block;
-  width:100%;
-  height: 60vh;
-  transition: all 5000ms;
+.hero {
+  height: 70vh;
+  width: 100%;
+  padding-top: 50px;
+  
 
-  @media only screen and (max-width: 400px) {
-    height: 55vh;
+  .hero-image {
+    background: url(img/0.jpg);
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height: 70vh;
+    left: 0;
+    transition: all 5000ms;
   }
-
-  @media only screen and (max-width: 800px) {
-    height: 50vh;
-  }
+  
+}
+.cloud-box{
+  padding-top: 50px;
 }
 
 .register {
@@ -37,7 +43,7 @@
 }
 
 .process {
-  margin: 60px 0 40px;
+  margin: 100px 0 5px;
 }
 .view-more-div {
   margin-top: 20px;
@@ -46,7 +52,7 @@
   .view-more {
     font-family: 'Cinzel', serif;
     margin-top: 20px;
-    border: 1px solid black;
+    border: 1px solid orange;
     padding: 10px 10px;
     text-align: center;
     border-radius: 15px;
@@ -71,9 +77,9 @@
   .steps {
     display: flex;
     flex-direction: column;
-    width: 320px;
+    width: 280px;
     align-items: center;
-    margin: 20px;
+    margin: 35px;
     height: fit-content;
     border-radius: 15px;
     text-align: center;
@@ -125,6 +131,7 @@
   p {
     color: white;
     font-family: 'Cinzel', serif;
+    font-size: 1.8rem;
   }
 }
 
@@ -167,14 +174,21 @@
     justify-content: center;
     
     .activity {
-      border: 1px solid lightgray;
+      border: 1px solid orange;
       display: flex;
       flex-direction: column;
-      width: 235px;
+      width: 225px;
       align-items: center;
-      margin: 3px;
+      margin: 8px;
       height: fit-content;
-      border-radius: 15px;
+      border-radius: 10px;
+      transition: all 600ms;
+
+      &:hover {
+        border: 1px solid orange;
+        transform: scale(1.1);
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+      }
     }
   }
 
@@ -183,7 +197,7 @@
   }
 
   p {
-    margin-top: 13px;
+    margin: 13px;
   }
 
   @media only screen and (max-width: 1000px) {
