--- a/less/mixins.less
+++ b/less/mixins.less
@@ -24,10 +24,10 @@
     justify-content: @justify;
 }
 
-// custom fixed navigation
-.fixedNav {
-    overflow: hidden;
-    position: fixed;
-    opacity: 0.9;
-    width: 100%;
-}
+// // custom fixed navigation
+// .fixedNav {
+//     overflow: hidden;
+//     position: fixed;
+//     opacity: 0.9;
+//     width: 100%;
+// }
