--- a/less/global.less
+++ b/less/global.less
@@ -29,9 +29,10 @@ h3 {
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 1.4;
   color: darkslategray;
+  padding-top: 5px;
 }
 
 .container {
