--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,16 +10,20 @@ header {
 
     menu {
         .custom-layout(center);
-        padding: 50px 0 49px;
-        position: relative;
+        overflow: hidden;
+        padding: 50px 0 44px;
+        position: fixed;
+        z-index: 2;
         flex-direction: column;
         background-color: black;
         width: 100%;
         height: 92px;
+        align-items: center;
+        opacity: 0.9;
 
         .check-mark {
-            width: 70px;
-            height: 50px;
+            width: 60px;
+            height: 35px;
 
             @media only screen and (max-width: 800px) {
                 width: 50px;
@@ -30,7 +34,7 @@ header {
         .logo {
             .custom-layout(center);
             flex-wrap: wrap;
-            font-size: 5rem;
+            font-size: 4rem;
             padding-left: 10px;
 
             @media only screen and (max-width: 800px) {
@@ -40,7 +44,7 @@ header {
 
         nav {
             .custom-layout(space-evenly);
-            width: 100%;
+            width: 90%;
             align-items: center;
             
             a {
